--- a/main.html
+++ b/main.html
@@ -8,6 +8,27 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="otp_body"> 
+		<div class="verify">
+        <div id="verification_heading">Verify Your Account</div>
+        <div id="verification_subtext">We emailed you the six digit code to acciojob@email.com Enter the code below to confirm your email address.</div>
+        
+        <div class="code-container"> 
+            <!-- <input type="text" class="code" id="code-1" maxlength=1 > 
+            <input type="text" class="code" id="code-2" maxlength=1 disabled>
+            <input type="text" class="code" id="code-3" maxlength=1 disabled>
+            <input type="text" class="code" id="code-4" maxlength=1 disabled>
+            <input type="text" class="code" id="code-5" maxlength=1 disabled>
+            <input type="text" class="code" id="code-6" maxlength=1 disabled> -->
+			<input type="text" class="code" id="code-1" maxlength=1 > 
+            <input type="text" class="code" id="code-2" maxlength=1>
+            <input type="text" class="code" id="code-3" maxlength=1>
+            <input type="text" class="code" id="code-4" maxlength=1>
+            <input type="text" class="code" id="code-5" maxlength=1>
+            <input type="text" class="code" id="code-6" maxlength=1>
+        </div>
+		</div>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
